--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 
 <section class="hero">
-  <img src="assets/hero.jpeg" alt="Trainer hero" class="hero-img" />
+  <img src="hero.jpeg" alt="Trainer hero" class="hero-img" />
   <div class="hero-content">
     <h1>Build Strength. Burn Fat. Stay Consistent.</h1>
     <p>Personalized coaching · Nutrition plans · Online & In-person</p>
