--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
 </header>
 
 <section class="hero-small">
+  <img src="hero.jpg" alt="Trainer hero" class="hero-img"/>
   <h1>Contact</h1>
   <p>Ask about programs or book a free intro call.</p>
 </section>
