Add hero section with image to contact.html
Added a hero section with an image to the contact page.

--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,10 @@
     <button id="themeToggle3">🌙</button>
   </div>
 </header>
-
+<section class="hero">
+  <img src="hero.jpeg" alt="Trainer hero" class="hero-img" />
+</section>
 <section class="hero-small">
-  <img src="hero.jpg" alt="Trainer hero" class="hero-img"/>
   <h1>Contact</h1>
   <p>Ask about programs or book a free intro call.</p>
 </section>
