Add hero section with image to programs.html

--- a/programs.html
+++ b/programs.html
@@ -25,7 +25,9 @@
   <h1>Programs</h1>
   <p>Plans built for every level — beginner to athlete.</p>
 </section>
-
+<section class="hero">
+  <img src="hero.jpeg" alt="Trainer hero" class="hero-img" />
+</section>
 <section class="programs-grid">
   <article class="program">
     <h3>Muscle Gain Pro</h3>
