--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,9 @@
     <button id="themeToggle4">🌙</button>
   </div>
 </header>
-
+<section class="hero">
+  <img src="hero.jpeg" alt="Trainer hero" class="hero-img" />
+</section>
 <section class="hero-small">
   <h1>Training Tips & Articles</h1>
   <p>Short, practical articles you can read and apply today.</p>
